--- a/app/src/main/res/layout/dialog_error.xml
+++ b/app/src/main/res/layout/dialog_error.xml
@@ -8,24 +8,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
-
-    <ImageView android:layout_width="300dp"
-               android:layout_height="300dp"
-               android:background="@drawable/circle"
-               android:layout_centerInParent="true"/>
+    >
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SCAN\nNFC HERE"
         android:layout_centerInParent="true"
-        android:textAlignment="center"
-        android:textSize="50dp"
-        android:textColor="#000000"/>
-    <ProgressBar
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:indeterminate="true"
-        android:id="@+id/progress_bar"
-        android:visibility="gone"/>
+        android:text="Could not read NFC data"
+        android:textSize="30dp"
+        android:id="@+id/error_text"/>
 </RelativeLayout>
