--- a/app/src/main/res/layout/dialog_results.xml
+++ b/app/src/main/res/layout/dialog_results.xml
@@ -10,33 +10,33 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     >
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="First Name"
-            android:textSize="25dp"
+            android:textSize="@dimen/fontSizeBigSmall"
             android:textStyle="bold"/>
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="First Name Placeholder"
             android:id="@+id/firstName"
-            android:textSize="30dp"/>
+            android:textSize="@dimen/fontSizeBigBig"/>
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Last Name"
-            android:textSize="25dp"
+            android:textSize="@dimen/fontSizeBigSmall"
             android:textStyle="bold"/>
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Last Name Placeholder"
             android:id="@+id/lastName"
-            android:textSize="30dp"
+            android:textSize="@dimen/fontSizeBigSmall"
             />
         <TextView
             android:layout_width="fill_parent"
